--- a/app1/public/index.html
+++ b/app1/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MEAN is best</title>
+  <title>This is App1</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
