Different centerfold pictures for different apps Changed scripts and HTML accordingly. Added some output to JS console

--- a/app2/public/index.html
+++ b/app2/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>This is App2</title>
+  <title>App2</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 
-  <h1>Express FTW!</h1>
+  <h1>Yeah!!! Koala</h1>
 
-  <img src="/images/PandaWizard.png">
+  <img src="/images/koala.png">
 
   <script src="javascript/script.js"></script>
 
