--- a/app1/public/index.html
+++ b/app1/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>This is App1</title>
+  <title>App1</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 
-  <h1>Express FTW!</h1>
+  <h1>Yeah!!! Panda</h1>
 
-  <img src="/images/PandaWizard.png">
+  <img src="/images/panda.png">
 
   <script src="javascript/script.js"></script>
 
